Visibility fix

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -76,7 +76,6 @@
 
 @keyframes fadeInFromNone {
   0% {
-    display: none;
     opacity: 0;
     transform: translateY(70px);
   }
@@ -90,7 +89,6 @@
   100% {
     transform: translateY(0);
     visibility: visible;
-    display: block;
     opacity: 1;
   }
 }
